# pi-apps-cli

./: CMakeLists.txt  README.md  install_checks.sh
.github/workflows/: build-package.yml  release.yml
debian/: changelog  control  copyright
src/: functions.c  functions.h  main.c
src/include/: functions.h
